[package]
name = "rredis"
version = "0.1.0"
authors = ["Stephan Dollberg <stephan.dollberg@gmail.com>"]
edition = "2018"


[dependencies]
io-uring = "*"
redis-protocol = "*"
anyhow = "*"
nix = "*"
lazy_static = "*"
socket2 = "*"
slab = "*"
libc = { version = "*", default-features = false }
tempfile = "*"
bytes = "*"